# bevy-rpg

./: .gitignore  Cargo.toml  index.html  ninja-killers-10-233f736632f9b20.js  ninja-killers-10-40eb023c9971e5a.js  ninja-killers-10-4e780b8dff8aca68.js  ninja-killers-10-65c4326cf1f45cb9.js  ninja-killers-10-7e720e9b55158409.js  ninja-killers-10-bca28df39574e0ac.js  ninja-killers-10-c03862459291bc6f.js  ninja-killers-10-feb3036eadb765a7.js
.github/workflows/: ci.yml  deploy-page.yaml
src/: bullet.rs  enemy.rs  level.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs  ui.rs
src/actions/: game_control.rs  mod.rs
src/item/: bullet.rs  granade.rs  homing_missile.rs  mod.rs
src/menu/: leaderboard.rs  mod.rs
