[package]
name = "bevy-rpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking", "bevy_asset"] }
bevy-inspector-egui = "0.20.0"
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
webbrowser = { version = "0.8.12", features = ["hardened"] }
