[package]
name = "ninja-killers-10"
version = "0.1.0"
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]


# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
default = ["dev"]
dev = ["bevy-inspector-egui", "bevy/bevy_dylib"]

[dependencies]
bevy = { version = "0.11.0", default_features = false, features = [
    "bevy_asset",
    "animation",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "multi-threaded",
    "png",
    "hdr",
    "ktx2",
    "zstd",
    "x11",
    "bevy_gizmos",
    "tonemapping_luts",
    "default_font",
    "webgl2",
] }
bevy-inspector-egui = {version = "0.20.0", optional=true}
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy_simple_text_input = "0.2"
rand = "0.8.5"
webbrowser = { version = "0.8.12", features = ["hardened"] }
